# Test01

./: .flake8  main.py  pyproject.toml
shop/app/: admin.py  exceptions.py  models.py  permissions.py  serializers.py  urls.py  views.py
shop/app/migrations/: 0001_initial.py  0002_initial.py  0003_alter_cart_quantity_alter_order_quantity.py
shop/app/tests/: test_views.py
shop/shop/: settings.py  urls.py
shop/user/: models.py  serializers.py  urls.py  views.py
shop/user/migrations/: 0001_initial.py
